--- a/webroot/css/custom.css
+++ b/webroot/css/custom.css
@@ -1,29 +1,6 @@
-.span-fill{
-	position: relative;
-	top: 0px;
+table td.roleSubmit {
+	vertical-align: middle;
 }
-
-.title-login{
-	background-color: #1BB99A;
-	color: white;
-	border: solid 0px;
-	border-top-left-radius: 5px;
-	border-top-right-radius: 5px;
-}
-
-.form-login{
-	background-color: white;
-	border: solid 0px white	;
-	border-radius: 5px;
-	margin-top: 5%;
-}
-
-.btn{
-	background-color: #1BB99A;
-	color: white;
-}
-
-.other-login{
-	padding-right: 3px;
-	padding-left: 3px;
+.actionForm {
+	margin-right: 10px;
 }
